# moody-diagram-generator

./: LICENSE  README.md  config.py  main.py  pyproject.toml  requirements.txt  ruff.toml
